[package]
name = "fltk-flex"
version = "0.1.4"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "A flexbox widget for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-flex"
documentation = "https://docs.rs/fltk-flex"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
fltk = "1.1.10"
fltk-derive = "1.1.10"